# market_outlook_client_crew

./: Dockerfile  README.md  pyproject.toml  report.md
src/market_outlook_client_crew/: crew.py  main.py
src/market_outlook_client_crew/config/: tasks.yaml
