[project]
name = "market_outlook_client_crew"
version = "0.1.0"
description = "market_outlook_client_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
]

[project.scripts]
market_outlook_client_crew = "market_outlook_client_crew.main:run"
run_crew = "market_outlook_client_crew.main:run"
train = "market_outlook_client_crew.main:train"
replay = "market_outlook_client_crew.main:replay"
test = "market_outlook_client_crew.main:test"
run_with_trigger = "market_outlook_client_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
# This forces uv to use a Windows-compatible version of lancedb
override-dependencies = [
    "lancedb==0.17.0"
]